t.tex added quotes

--- a/fdphd.bib
+++ b/fdphd.bib
@@ -652,6 +652,17 @@ Terahertz spectroscopy of ferroelectrics and related materials
   year={2004},
   publisher={APS}
 }
+@article{szabo2010unique,
+  title={A unique extraction of metamaterial parameters based on Kramers--Kronig relationship},
+  author={Szabo, Zsolt and Park, Gi-Ho and Hedge, Ravi and Li, Er-Ping},
+  journal={Microwave Theory and Techniques, IEEE Transactions on},
+  volume={58},
+  number={10},
+  pages={2646--2653},
+  year={2010},
+  publisher={IEEE}
+}
+
 @article{yang2010retrieving,
   title={Retrieving the effective parameters of metamaterials from the single interface scattering problem},
   author={Yang, Jianji and Sauvan, Christophe and Paul, T and Rockstuhl, C and Lederer, F and Lalanne, Philippe},
