--- a/t.tex
+++ b/t.tex
@@ -36,9 +36,7 @@
 %\definecolor{labelkey}{blue}
 %\renewcommand*{\showkeyslabelformat}[1]{\hspace{-9mm}\vbox{\hsize=1.1cm\normalfont\tiny#1}}
 
-%TODO Quotes: 
-% The purpose of computing is insight, not numbers. -- R. W. Hamming
-
+ 
 \begin{document}
 \input{title.tex}
 \tableofcontents
@@ -46,19 +44,21 @@
 \chapter{Introduction}
 \input{intro.tex}
 
-\chapter{Theory}
+\chapter{Theory} % “There is Nothing More Practical Than A Good Theory” -- K. Lewin, A. Einstein or whoever was the first to realize this
 \input{theory.tex}
 
-\chapter{Numerical methods}
+\chapter{Numerical methods} 
+% Computers are useless. They can only give you answers. -- Pablo Picasso (1968) 
 \input{numeric.tex}
 
 \chapter{Experimental methods}
 \input{expe.tex}
 
 \chapter{Results}
+% The purpose of computing is insight, not numbers. -- R. W. Hamming
 \input{result.tex}
 
-\chapter{Conclusion}
+\chapter{Conclusion} %Scientific discovery and scientific knowledge have been achieved only by those who have gone in pursuit of them without any practical purpose whatsoever in view. -- Max Planck The New Science (1959), 93. 
 %\input{conclusion.tex}
 
 \label{endtext} 
